--- a/example.conf
+++ b/example.conf
@@ -1,9 +1,11 @@
+req_status_zone server "$server_addr:$server_port" 10M;
 
 upstream servers {
     least_conn;
-    server 192.168.0.1:80;
-    server 192.168.0.2:80;
-
+    server upstreaming_server_1;
+    server upstreaming_server_2;
+    server upstreaming_server_3 backup;
+    
     check interval=30000 rise=2 fall=5 timeout=1000 type=http;
     check_http_send "HEAD / HTTP/1.0\r\n\r\n";
     check_http_expect_alive http_2xx http_3xx;
@@ -11,7 +13,7 @@ upstream servers {
 
 server {
     listen 80;
-
+    server_name your_server_address_or_dns;
     location / {
         proxy_pass http://servers;
         proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504 http_404;
@@ -19,15 +21,9 @@ server {
 
     location /check_status {
         check_status;
-        access_log   off;
-        allow SOME.IP.ADD.RESS;
-        deny all;
     }
+    location /request_status {
+        req_status_show;
+    }
+    req_status server;
 }
-
-
-
-# check interval=60000 rise= fall= type= timeout=
-# check_http_send 
-# check_http_expect_alive
-# 
